deploy/infrastructure/argocd/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app: argocd-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.techbit.su`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls-secret
